# pi-led-matrix

./: .gitignore
rust/pi-led-rust/: Cargo.toml  README.md  config.toml
rust/pi-led-rust/src/: effects.rs  libs.rs  main.rs
rust/pi-led-rust/src/effects/: color_test.rs  displayimage.rs  displaytext.rs  leds_off.rs  mod.rs  pacman.rs  pong.rs  space_invaders.rs
rust/pi-led-rust/src/libs/: colors.rs  config.rs  mod.rs  raspberrypi.rs  simulation.rs
rust/sim-led-rust/: Cargo.toml
rust/sim-led-rust/src/: main.rs
