[package]
name = "pi-led-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "arm")'.dependencies]
rs_ws281x = "0.5.1"

[target.'cfg(not(target_arch = "arm"))'.dependencies]
minifb = "0.25.0"

[dependencies]
rand = "0.8.5"
ril = { version = "0.10.1", features = ["all"] }
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"
